--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Website</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Website</title>
-</head>
-
-<body>
-  Hello World
-</body>
-
+  <body>
+    Hello World
+    <h1>Faran Mohammad</h1>
+  </body>
 </html>
